# my-tech-pulse-agent

./: .cursorignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TODOS.md  firestore.indexes.json  main.py  pyproject.toml  pyrightconfig.json
agents/: __init__.py  conclusion_agent.py  decision_context_builder.py  deep_insight_agent.py  earnings_agent.py  earnings_analyzer.py  earnings_deep_render.py  earnings_fact_guard.py  earnings_models.py  earnings_narrative_extractor.py  earnings_v3_enrich.py  earnings_v3_models.py  eps_non_gaap_extractor.py  extractor_agent.py  financial_health_builder.py  guidance_extractor.py  macro_context_builder.py  news_takeaway_agent.py  news_takeaway_models.py  price_reaction_builder.py  relationship_extractor.py  relationship_models.py  reviewer_agent.py  scorecard_builder.py  segment_extractor.py  synthesizer_agent.py  transcript_agent.py  translation_agent.py  trend_builder.py
backtest/: __init__.py  decision_log.py  metrics.py  pit_data.py  replay.py  universe.py  weight_suggestions.py
config/: catalysts.yaml  company_aliases.yaml  earnings_watchlist.yaml  historical_universe.json  portfolio.yaml  supply_chain_manual.yaml
dashboard/: .env.example  .env.local.sample  .gitignore  DESIGN.md  README.md  eslint.config.mjs  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
data/: clusters.json
delivery/: feedback_handler.py  feedback_poller.py  invest_alert.py  message_formatter.py  pipeline_alert.py  revalidate.py  static_site_builder.py  telegram_bot.py
docs/: AGENT-DOMAIN.md  AGENT-WORKFLOW.md  DEPLOY_CHECKLIST.md  EARNINGS_API_EVALUATION.md  EARNINGS_ENV.md  EARNINGS_PORTAL.md  ENABLEMENT_CHECKLIST.md  FINNHUB_PRODUCTION_SETUP.md  LOCAL_DEV_SETUP.md  PORTAL_CONTRACT.md  QSILICON_INTEGRATION.md  SCHEDULED_RUNS.md  SEMANTIC_DEDUP_ROLLOUT.md  STAGING.md  VENDOR_ENABLEMENT.md  WORKFLOW.md
llm/: __init__.py  embedding_client.py  gemini_client.py  localization.py  zh_backfill.py
pipeline/: crew.py  earnings_pipeline.py  runtime_config.py  scheduler.py
scoring/: __init__.py  deduplicator.py  (+17 more)
(+350 files in other folders)
