[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-pulse"
version = "0.1.4"
description = "AI-powered tech news intelligence pipeline"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "pdfplumber>=0.11.0",
    "pydantic>=2.7.0",
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "google-cloud-firestore>=2.16.0",
    "opencc-python-reimplemented==0.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pyright>=1.1.0",
    "ruff>=0.8.0",
    "vulture>=2.14",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::pytest.PytestDeprecationWarning:pytest_asyncio.plugin",
]

[tool.ruff]
target-version = "py311"
exclude = ["dashboard", "node_modules", ".venv", "venv"]

[tool.ruff.lint]
select = ["F"]

[tool.ruff.lint.per-file-ignores]
"scripts/preflight.py" = ["E402"]
"tests/smoke_test.py" = ["E402"]
"tests/test_translation_agent.py" = ["E402"]
"tests/test_zh_backfill.py" = ["E402"]

[tool.coverage.run]
omit = [
  "dashboard/*",
  "tests/*",
  "scripts/*",
  ".venv/*",
  "venv/*",
]

[tool.coverage.report]
fail_under = 62
